syntax = "proto3";

package protocol;
//protoc --java_out=./ Greqptc.proto
option java_package = "com.fireflyi.gerant.rpclient.protobuf";
option java_outer_classname = "GreqPtc";
option java_multiple_files = true;

message Greq {
    string cmdId = 1; //聊天类型
    string reqMsg = 2;
    string uid = 3;//发送请求用户id
    string objId = 4; //发送目标id
    int64 time = 5;//消息发送时间
}